# bachelorproef

./: .gitignore  analyseer_finetuning.py  analyseer_hybride.py  analyseer_visie.py  evalueer.py  pyproject.toml  test_finetuned.py  vergelijk_pipelines.py
finetuning/.claude/: settings.local.json
finetuning/text/: Modelfile
finetuning/vision/: Modelfile  convert_mlx.py
pipelines/: time_limit.py
pipelines/baseline/: hybride.py  run_all.sh  tekst.py  visie.py
pipelines/finetuned/: hybride.py  run_all.sh  run_all_ubuntu.sh  tekst.py  visie.py
pipelines/mac/: hybride.py  run_all.sh  tekst.py  visie.py
pipelines/mac/baseline/: hybride.py  hybride_mlx.py  run_all.sh  tekst.py  visie.py  visie_mlx.py
pipelines/mac/finetuned/: hybride.py  mlx_vision_infer.py  run_all.sh  tekst.py  visie.py
training/: inference_qlora.py  maak_trainingsdata.py  maak_trainingsdata_visie.py  prepare_dataset.py  train_qlora.py
