[project]
name = "bachelorproef"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "ollama>=0.6.1",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.12",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.32.0",
    "pdfplumber>=0.11.9",
    "pymongo>=4.17.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
]
